--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tiagolpires/graphql-api#readme",
   "dependencies": {
+    "apollo-server": "^3.4.0",
     "graphql": "^16.0.1"
   }
 }
