feat: add mongoose

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/tiagolpires/graphql-api#readme",
   "dependencies": {
     "apollo-server": "^3.4.0",
-    "graphql": "^16.0.1"
+    "graphql": "^16.0.1",
+    "mongoose": "^6.0.12"
   },
   "devDependencies": {
     "jest": "^27.3.1"
